[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-forge"
version = "0.1.0"
description = "A standard AI engineering project setup in nexus-forge."
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn"
]
