[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-forge"
version = "0.1.0"
description = "AI Engineering learning projects"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]

You are an expert Python AI engineer.
- Always use type hints
- Use Pydantic v2 for data validation
- Prefer async functions for I/O operations
- Write tests alongside every function
- Use logging not print statements
