[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-forge"
version = "0.1.0"
description = "AI Engineering learning projects"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn"
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]
